<resources>
    <string name="app_name">homework5</string>
    <string name="photo">photo</string>
    <string name="register">REGISTER</string>
    <string name="log_in">LOG IN</string>
    <string name="next">NEXT</string>
    <string name="register1">Register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="agreement">By signing up, you agree to Photo’s Terms of Service and Privacy Policy.</string>
    <string name="log_in1">Log in</string>
    <string name="log_in2">LOG IN</string>
</resources>