<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="38dp"
        android:layout_height="11.26dp"
        android:layout_marginTop="350dp"
        android:layout_marginStart="95.26dp"
        android:background="#E8479B" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="38dp"
        android:layout_height="11.26dp"
        android:layout_marginTop="1dp"
        android:layout_marginStart="82dp"
        android:rotation="90"
        android:background="#E8479B" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="38dp"
        android:layout_height="11.26dp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="95.26dp"
        android:background="@color/black" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="38dp"
        android:layout_height="11.26dp"
        android:layout_marginTop="-25dp"
        android:layout_marginStart="110dp"
        android:rotation="90"
        android:background="@color/black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-25dp"
        android:layout_marginStart="150dp"
        android:text="@string/photo"
        android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="280dp"
        android:background="@color/white"
        android:text="@string/log_in" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="205dp"
        android:layout_marginTop="-48dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/register" />


</androidx.appcompat.widget.LinearLayoutCompat>